--- a/template/index.html
+++ b/template/index.html
@@ -82,8 +82,8 @@
             </article>
         </div>
     </section>
-    <section>
-        <main class="container-xxl">
+    <main>
+        <section class="container-xxl">
             <div class="high-events">
                 <div class="high-events-heading">
                     <h2 class="theme roboto-regular">Highlighted Events</h2>
@@ -102,8 +102,7 @@
                     </div>
                     <div class="half-card ">
                         <div class="two-card">
-                            <div class="first-card cards"
-                                style='background-image: url("../static/images/manali.jpg");'>
+                            <div class="first-card cards" style='background-image: url("../static/images/manali.jpg");'>
                                 <div class="card-liner"></div>
                                 <div class="card-body">
                                     <div>
@@ -139,8 +138,47 @@
                     </div>
                 </div>
             </div>
-        </main>
-    </section>
+        </section>
+        <section class="states-outer">
+            <div class="states">
+                <div class="s-card" id="saputara" onmouseover="change_image('saputara')">
+                    <div class="bg-drop"></div>
+                    <div class="s-card-body">
+                        <p class="s-card-contant">visit</p>
+                        <p class="s-contant-name elm-regular fs-4">Gujarat</p>
+                    </div>
+                </div>
+                <div class="s-card" id="goa" onmouseover="change_image('goa')">
+                    <div class="bg-drop"></div>
+                    <div class="s-card-body ">
+                        <p class="s-card-contant">visit</p>
+                        <p class="s-contant-name elm-regular fs-4">Goa</p>
+                    </div>
+                </div>
+                <div class="s-card" id="goa" onmouseover="change_image('manali')">
+                    <div class="bg-drop"></div>
+                    <div class="s-card-body ">
+                        <p class="s-card-contant">visit</p>
+                        <p class="s-contant-name elm-regular fs-4">Uttrakhad</p>
+                    </div>
+                </div>
+                <div class="s-card" id="rajasthan" onmouseover="change_image('rajasthan')">
+                    <div class="bg-drop"></div>
+                    <div class="s-card-body">
+                        <p class="s-card-contant">visit</p>
+                        <p class="s-contant-name elm-regular fs-4">Rajasthan</p>
+                    </div>
+                </div>
+                <div class="s-card" id="rajasthan" onmouseover="change_image('ladakh')">
+                    <div class="bg-drop"></div>
+                    <div class="s-card-body">
+                        <p class="s-card-contant">visit</p>
+                        <p class="s-contant-name elm-regular fs-4">Kashmir</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <section>
         <footer class="container-xxl">
             <div class="footer-top ">
@@ -196,10 +234,13 @@
             </div>
         </footer>
     </section>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="../static/js/index.js"></script>
     <script src="../static/js/bootstrap.js"></script>
+    <script src="../static/js/index.js"></script>
 </body>
+
 </html>
