--- a/static/css/main_page.css
+++ b/static/css/main_page.css
@@ -111,10 +111,55 @@
     /* backdrop-filter: ; */
 
 }
-
-
 .cards:hover {
-    /* background-image: ; */
-
     cursor: pointer;
+}
+
+.states
+{
+    width: 100%;
+    height: 585px;
+    background-image: url("../images/gj-saputara.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    margin-top: 20px;
+    overflow: hidden;
+}
+.bg-drop
+{
+    position: absolute;
+    height: 150px;
+    width: 100%;
+    transform: translateY(-150px);
+    background-color: black;
+    z-index: 4;
+}
+.s-card
+{
+    width: 100%;
+    border-right: solid 1px rgb(255, 255, 255);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.s-card:hover .bg-drop
+{
+    transform: translateY(0px);
+
+}
+.s-card-body{
+    margin-top: 30px;
+    position: absolute;
+    text-align: center;
+    z-index: 5;
+    /* background-color: aqua; */
+}
+.s-card-body .s-contant-name
+{
+    margin-top: -5px;
+    font-size: 1rem;
+    text-align: center; 
 }
