--- a/template/index.html
+++ b/template/index.html
@@ -50,8 +50,8 @@
                 <a href="index.html">Invincible</a>
             </div>
             <div class="menu  karla-regular ">
-                <a href="" class="active-m">HOME</a>
-                <a href="">ABOUT US</a>
+                <a href="index.html" class="active-m">HOME</a>
+                <a href="about.html">ABOUT US</a>
                 <a href="">EVENTS</a>
                 <a href="">CONTACT US</a>
                 <!-- <a href="">CONTACT US</a> -->
@@ -83,7 +83,7 @@
         </div>
     </section>
     <main>
-        <section class="container-xxl">
+        <section class="container-lg">
             <div class="high-events">
                 <div class="high-events-heading">
                     <h2 class="theme roboto-regular">Highlighted Events</h2>
@@ -139,9 +139,54 @@
                 </div>
             </div>
         </section>
+        <section class="service container-lg">
+            <div class="text-contant">
+                <div class="service-heading ">
+                    <h3 class="elm-regular">Experience The New Adventure</h3>
+                    <p>Experience the new adventure as you step beyond the ordinary! Discover breathtaking destinations,
+                        embrace thrilling activities, and create unforgettable memories. Every journey is a chance to
+                        explore, dream, and live life to the fullest</p>
+                </div>
+                <div class="service-objective">
+                    <div class="objective">
+                        <div class="icon">
+                            <i class="fa fa-shield"></i>
+                        </div>
+                        <div class="obj-description">
+                            <h4 class="elm-regular theme">Safe Traveling</h4>
+                            <p>Travel smart, stay safe, and make every journey a secure and enjoyable adventure</p>
+                        </div>
+                    </div>
+                    <div class="objective">
+                        <div class="icon">
+                            <i class="fa fa-rupee"></i>
+                        </div>
+                        <div class="obj-description">
+                            <h4 class="elm-regular theme">Affordable Price</h4>
+                            <p>Get the best quality services at the most affordable prices</p>
+                        </div>
+                    </div>
+                    <div class="objective">
+                        <div class="icon">
+                            <i class="fa fa-bed"></i>
+                        </div>
+                        <div class="obj-description">
+                            <h4 class="elm-regular theme"> Comfort Accommodation</h4>
+                            <p>Enjoy the perfect blend of comfort and convenience in our accommodations
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="service-video" id="service-video">
+                <video autoplay loop muted>
+                    <source src="../static/Video/Invincible - Made with Clipchamp.mp4" type="video/mp4" />
+                </video>
+            </div>
+        </section>
         <section class="states-outer">
             <div class="states">
-                <div class="s-card" id="saputara" onmouseover="change_image('saputara')">
+                <div class="s-card fades" id="saputara" onmouseover="change_image('saputara')">
                     <div class="bg-drop"></div>
                     <div class="s-card-body">
                         <p class="s-card-contant">visit</p>
@@ -178,6 +223,7 @@
                 </div>
             </div>
         </section>
+
     </main>
     <section>
         <footer class="container-xxl">
