--- a/template/description.html
+++ b/template/description.html
@@ -58,7 +58,7 @@
         <!-- </div> -->
         <nav class="container-xxl">
             <div class="logo elm-regular logo-font">
-                <a href="index.html">Invincible</a>
+                <a href="/">Invincible</a>
             </div>
             <div class="menu  karla-regular d-lg-flex d-none">
                 <a href="/" class="active-m">HOME</a>
@@ -192,7 +192,7 @@
                 <div class="footer-top flex-column flex-md-row">
                     <div class="footer-contant">
                         <div class="logo elm-regular logo-font">
-                            <a href="index.html" class="font-size">Invincible</a>
+                            <a href="/" class="font-size">Invincible</a>
                         </div>
                         <div class="intro">
                             <p>"Invincible Tours and Travels offers unforgettable experiences, letting you explore
