--- a/template/booking.html
+++ b/template/booking.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,18 +7,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking</title>
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
+    
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../static/css/fonts.css">
-    <!-- <link rel="stylesheet" href="../static/css/main.css"> -->
-    <!-- <link rel="stylesheet" href="../static/css/main_page.css"> -->
-    <link rel="stylesheet" href="../static/css/mediaqury.css">
-    <!-- <link rel="stylesheet" href="../static/css/package.css"> -->
-    <link rel="stylesheet" href="../static/css/booking.css">
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/main.css' %}"> -->
+    <!-- <link rel="stylesheet" href="{% static 'css/main_page.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/mediaqury.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/package.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/booking.css' %}">
 
 </head>
 
@@ -91,7 +94,7 @@
                         <button class="btn btn-outline-secondary btn-people" type="button" value="6"
                             onclick="addperson(value)">6</button> -->
                             <input type="number" class="form-control theme-control" name="total"
-                                onkeyup="addperson(this.value)">
+                                onkeyup="addperson(this.value)" value="1">
                         </div>
 
                         <div class="person pb-5 flex-column align-items-start">
@@ -169,10 +172,10 @@
         </div>
         </div>
     </main>
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="../static/js/index.js"></script>
-    <script src="../static/js/booking.js"></script>
-    <script src="../static/js/receipt.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/index.js' %}"></script>
+    <script src="{% static 'js/booking.js' %}"></script>
+    <script src="{% static 'js/receipt.js' %}"></script>
 </body>
 
 </html
