--- a/template/faq.html
+++ b/template/faq.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,18 +6,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ</title>
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="../static/css/fonts.css">
-    <link rel="stylesheet" href="../static/css/main.css">
-    <link rel="stylesheet" href="../static/css/main_page.css">
-    <link rel="stylesheet" href="../static/css/faq.css">
-    <link rel="stylesheet" href="../static/css/mediaqury.css">
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main_page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/faq.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mediaqury.css' %}">
 </head>
 
 <body>
@@ -38,7 +39,7 @@
     {% endif %}
     <section class="faq-head-part">
         <div class="image">
-            <img src="../static/images/Marvellous Matheran.jpg" alt="">
+            <img src="{% static 'images/Marvellous Matheran.jpg' %}" alt="">
         </div>
         <nav class="container-xxl">
             <div class="logo elm-regular logo-font">
@@ -49,13 +50,10 @@
                 <a href="/about-us">ABOUT US</a>
                 <a href="/events">EVENTS</a>
                 <a href="/contact-us">CONTACT US</a>
-                <!-- <a href="">CONTACT US</a> -->
             </div>
             <div class="menu-add">
                 <i class="ri-menu-line" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
                     aria-controls="offcanvasRight"></i>
-                <!-- <button class="btn btn-primary">Toggle right offcanvas</button> -->
-
                 {% include 'offcanvas.html'  %}
             </div>
         </nav>
@@ -257,41 +255,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"
         integrity="sha512-xAxjKW1J/R4TFytv43xvQ7jFTrJlBzsDOH/Aw0fFc2nvarQkE3d08lTicjzUsZJYDoHYDCpwsUUqOJXh34A1sw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-crossorigin="anonymous" referrerpolicy="no-referrer"></script>  -->
 
-    <!--Owl carousel min.js-->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="../static/js/index.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 </body>
 
 </html>
 
 
- <!-- <div class="mb-4">
-                            <label for="exampleFormControlInput1" class="form-label">Name</label>
-                            <input type="text" class="form-control" name="cname" id="cname" onkeyup="validateData(this)">
-                        </div>
-                        <div class="mb-4">
-                            <label for="exampleFormControlInput1" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" name="email" onkeyup="validateData(this)">
-                        </div>
-                        <div class="mb-4">
-                            <label for="exampleFormControlInput1" class="form-label">Mobile Number</label>
-                            <input type="text" class="form-control" id="mobile" name="mobile"         onkeyup="validateData(this)" maxlength="10">
-                        </div>
-                        <div class="d-flex gap-2">
-                            <div class="mb-1 w-50">
-                                <label for="exampleFormControlInput1" class="form-label">Password</label>
-                                <input type="text" class="form-control"id="password" name="password" onkeyup="validateData(this)">
-                                <p id="pass-error" class="text-danger pt-2"></p>
-                            </div>
-                            <div class="mb-1 w-50">
-                                <label for="exampleFormControlInput1" class="form-label">Confirm Password</label>
-                                <input type="Password" class="form-control" id="cpassword" name="cpassword" onkeyup="validateData(this)">
-                                <p id="cpass-error" class="text-danger pt-2"></p>
-                            </div> -->
+ 
