--- a/template/index.html
+++ b/template/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,17 +8,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invincible</title>
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="../static/css/fonts.css">
-    <link rel="stylesheet" href="../static/css/main.css">
-    <link rel="stylesheet" href="../static/css/main_page.css">
-    <link rel="stylesheet" href="../static/css/mediaqury.css">
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main_page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mediaqury.css' %}">
 </head>
 
 <body>
@@ -41,24 +44,16 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../static/images/slide-1.webp" class="d-block  w-100 h-100">
+                    <img src="{% static 'images/slide-1.webp' %}" class="d-block  w-100 h-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="../static/images/slide-2.jpg" class="d-block w-100 h-100">
+                    <img src="{% static 'images/slide-2.jpg' %}" class="d-block w-100 h-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="../static/images/slide-3.jpg" class="d-block w-100 h-100" alt="...">
+                    <img src="{% static 'images/slide-3.jpg' %}" class="d-block w-100 h-100" alt="...">
                     </img>
                 </div>
             </div>
-            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button> -->
-            <!-- <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next"> -->
-            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span> -->
-            <!-- </button> -->
         </div>
         <!-- </div> -->
         <nav class="container-xxl">
@@ -97,7 +92,7 @@
                     <a href=""><i class="bi bi-twitter"></i></a>
                 </div>
                 <div class="scroll-arrow">
-                    <img src="../static/images/arrow.png" alt="">
+                    <img src="{% static 'images/arrow.png'%}" alt="">
                 </div>
             </article>
         </div>
@@ -200,7 +195,7 @@
             </div>
             <div class="service-video" id="service-video">
                 <video autoplay loop muted>
-                    <source src="../static/Video/Invincible.mp4" type="video/mp4" />
+                    <source src="{% static 'Video/Invincible.mp4' %}" type="video/mp4" />
                 </video>
             </div>
         </section>
@@ -209,16 +204,16 @@
                 <h3 class="heading elm-regular">Our Best Tour Pakages</h3>
             </div>
             <div class="pkg-container">
-                <a href="packages.html"><img src="../static/images/card-01.jpg" alt=""></a>
-                <a href=""><img src="../static/images/card-02.jpg" alt=""></a>
-                <a href=""><img src="../static/images/card-03.jpg" alt=""></a>
-                <a href=""><img src="../static/images/card-04.jpg" alt=""></a>
+                <a href=""><img src="{% static 'images/card-01.jpg' %}" alt=""></a>
+                <a href=""><img src="{% static 'images/card-02.jpg' %}" alt=""></a>
+                <a href=""><img src="{% static 'images/card-03.jpg' %}" alt=""></a>
+                <a href=""><img src="{% static 'images/card-04.jpg' %}" alt=""></a>
             </div>
             <div class="pkg-container">
-                <a href=""><img src="../static/images/card-05.jpg" alt=""></a>
-                <a href=""><img src="../static/images/card-06.jpg" alt=""></a>
-                <a href=""><img src="../static/images/card-07.jpg" alt=""></a>
-                <a href=""><img src="../static/images/card-08.jpg" alt=""></a>
+                <a href=""><img src="{% static 'images/card-05.jpg' %}" alt=""></a>
+                <a href=""><img src="{% static 'images/card-06.jpg' %}" alt=""></a>
+                <a href=""><img src="{% static 'images/card-07.jpg' %}" alt=""></a>
+                <a href=""><img src="{% static 'images/card-08.jpg' %}" alt=""></a>
             </div>
         </section>
 
@@ -323,7 +318,6 @@
                                     <li><a href="/about-us">About Us</a></li>
                                     <li><a href="/events">Events</a></li>
                                     <li><a href="/contact-us">Contact US</a></li>
-                                    <li><a href="/faq">FAQ</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -415,8 +409,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="../static/js/index.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 </body>
 
 </html>
