--- a/template/packages.html
+++ b/template/packages.html
@@ -6,18 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Packages</title>
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="../static/css/fonts.css">
-    <link rel="stylesheet" href="../static/css/main.css">
-    <!-- <link rel="stylesheet" href="../static/css/main_page.css"> -->
-    <link rel="stylesheet" href="../static/css/mediaqury.css">
-    <link rel="stylesheet" href="../static/css/package.css">
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mediaqury.css' %}">
+    <link rel="stylesheet" href="{% static 'css/package.css' %}">
 
 </head>
 
@@ -44,26 +43,17 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../static/images/slide-1.webp" class="d-block  w-100 h-100">
+                    <img src="{% static 'images/slide-1.webp' %}" class="d-block w-100 h-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="../static/images/slide-2.jpg" class="d-block w-100 h-100">
+                    <img src="{% static 'images/slide-2.jpg' %}" class="d-block w-100 h-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="../static/images/slide-3.jpg" class="d-block w-100 h-100" alt="...">
+                    <img src="{% static 'images/slide-3.jpg' %}" class="d-block w-100 h-100" alt="...">
                     </img>
                 </div>
             </div>
-            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button> -->
-            <!-- <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next"> -->
-            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span> -->
-            <!-- </button> -->
         </div>
-        <!-- </div> -->
         <nav class="container-xxl">
             <div class="logo elm-regular logo-font">
                 <a href="/">Invincible</a>
@@ -73,12 +63,10 @@
                 <a href="/about-us">ABOUT US</a>
                 <a href="/events" class="active-m">EVENTS</a>
                 <a href="/contact-us">CONTACT US</a>
-                <!-- <a href="">CONTACT US</a> -->
             </div>
             <div class="menu-add">
                 <i class="ri-menu-line" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
                     aria-controls="offcanvasRight"></i>
-                <!-- <button class="btn btn-primary">Toggle right offcanvas</button> -->
                 {% include 'offcanvas.html' %}
             </div>
         </nav>
@@ -320,7 +308,6 @@
                                     <li><a href="/">Home</a></li>
                                     <li><a href="/about-us">About Us</a></li>
                                     <li><a href="/contact-us">Contact US</a></li>
-                                    <li><a href="/faq">FAQ</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -356,13 +343,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <!--Owl carousel min.js-->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-     integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-     crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="../static/js/index.js"></script>
+        <script src="{% static 'js/bootstrap.js' %}"></script>
+        <script src="{% static 'js/index.js' %}"></script>
 </body>
 
 </html>
