--- a/template/registration.html
+++ b/template/registration.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,18 +7,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../static/css/fonts.css">
-    <!-- <link rel="stylesheet" href="../static/css/main.css"> -->
-    <!-- <link rel="stylesheet" href="../static/css/main_page.css"> -->
-    <link rel="stylesheet" href="../static/css/mediaqury.css">
-    <!-- <link rel="stylesheet" href="../static/css/package.css"> -->
-    <link rel="stylesheet" href="../static/css/registration.css">
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mediaqury.css' %}">
+    <link rel="stylesheet" href="{% static 'css/registration.css' %}">
 
 </head>
 
@@ -104,12 +103,11 @@
                 <span id="otp-form">
 
                 </span>
-            </div>
-    </main>
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="../static/js/index.js"></script>
-    <!-- <script src="../static/js/booking.js"></script> -->
-    <script src="../static/js/registration.js"></script>
+                            </div>
+                    </main>
+                    <script src="{% static 'js/bootstrap.js' %}"></script>
+                    <script src="{% static 'js/index.js' %}"></script>
+                    <script src="{% static 'js/registration.js' %}"></script>
 </body>
 
 </html
